--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -1,22 +1,26 @@
 #move {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  top: 40%;
-  left: 10%;
+  position: relative;
+  height: 50px;
+  text-align: center;
 
   .btn-circle-border-double {
     display: inline-block;
     text-decoration: none;
     color: #668ad8;
-    width: 120px;
-    height: 120px;
-    line-height: 120px;
+    width: 320px;
+    height: 320px;
+    line-height: 320px;
     border-radius: 50%;
     border: double 4px #668ad8;
     text-align: center;
     overflow: hidden;
-    transition: .6s;
+    transition: .2s;
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 20vh;
+    left: 36.5%;
+    background-color: white;
   }
   
   .btn-circle-border-double:hover {
