--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 50px;
   text-align: center;
-
+  padding-top: 60px;
 
   .btn-circle-border-double {
     display: inline-block;
@@ -17,10 +17,6 @@
     overflow: hidden;
     transition: .2s;
     font-size: 40px;
-    text-align: center;
-    position: absolute;
-    top: 20vh;
-    left: 36.5%;
     background-color: white;
   }
   
