--- a/app/assets/stylesheets/modules/_app.scss
+++ b/app/assets/stylesheets/modules/_app.scss
@@ -1,7 +1,7 @@
 .app-background-image {
   width: 100%;
   height: 0;
-  padding-top: 47.4%;
+  padding-top: 85vh;
   background-image: image-url("save-3402476_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
