--- a/app/assets/stylesheets/modules/_app.scss
+++ b/app/assets/stylesheets/modules/_app.scss
@@ -1,17 +1,27 @@
-.app-background-image {
-  width: 100%;
-  height: 0;
-  padding-top: 85vh;
-  background-image: image-url("save-3402476_1920.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 50%;
+a {
+  text-decoration: none;
+  color: gray;
 }
 
-.bg-alpha {
-  background-color: rgba(255, 255, 255, 0.7);
+li {
+  list-style: none;
 }
 
-.navbar-light {
-  padding-bottom: 60px;
+body {
+  font-family: 'Lato', 'Noto Sans JP', 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+
+  .app-background-image {
+    width: 100%;
+    min-width: 230px;
+    height: 0;
+    padding-top: 85vh;
+    background-image: image-url("save-3402476_1920.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center 50%;
+  }
+  
+  .bg-alpha {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
 }
