--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -19,6 +19,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 70px;
+    left: 150px;
   }
   
   .btn-circle-border-double:hover {
@@ -32,5 +35,8 @@
     line-height: 150px;
     padding-top: 20px;
     text-align: left;
+    position: absolute;
+    top: 350px;
+    left: 150px;
   }
 }
