--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,13 +13,23 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    .navbar.navbar-expand-lg.navbar-light.bg-alpha
+    .navbar.navbar-expand-lg.navbar-light.bg-alpha.top-posi
       = link_to "サイト名", "/", class: "navbar-brand"
       .collapse.navbar-collapse#navbarSupportedContent
-      %ul.navbar-nav.mr-auto
-        %li.nav-item.active
-        = link_to "新規登録", "#", class: "nav-link"
-        %li.nav-item.active
-        = link_to "ログイン", "#", class: "nav-link"
+      - if user_signed_in?
+        %ul.navbar-nav.mr-auto
+          %li.nav-item.active
+          = link_to "プロフィール変更", edit_user_registration_path, class: "nav-link"
+          %li.nav-item.active
+          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link"
+      - else
+        %ul.navbar-nav.mr-auto
+          %li.nav-item.active
+          = link_to "新規登録", new_user_registration_path, class: "nav-link"
+          %li.nav-item.active
+          = link_to "ログイン", new_user_session_path, class: "nav-link"
+      .notice
+        %notice
+      .alert
+        %alert
     = yield
-    .app-background-image
