--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import "modules/app";
 @import "modules/top";
+@import "modules/user_registrions";
+@import "modules/edit_registraions";
 @import "modules/responsive";
 @import "bootstrap"; 
