--- a/app/views/top/top.html.haml
+++ b/app/views/top/top.html.haml
@@ -1,6 +1,6 @@
 #move
   - if user_signed_in?
-    = link_to "始める！", "#", class: "btn-circle-border-double"
+    = link_to "始める！", result_index_path, class: "btn-circle-border-double"
   - else
     = link_to "始める！", new_user_session_path, class: "btn-circle-border-double"
   %h1.top-propa
