--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "modules/top";
 @import "modules/user_registrions";
 @import "modules/edit_registraions";
+@import "modules/result";
 @import "modules/responsive";
 @import "bootstrap"; 
