--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -40,3 +40,13 @@
     left: 150px;
   }
 }
+
+.app-background-image {
+  width: 100%;
+  height: 0;
+  padding-top: 85vh;
+  background-image: image-url("save-3402476_1920.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center 50%;
+}
