貯金額などの入力フォーム作成に伴う処理

--- a/app/views/result/index.html.haml
+++ b/app/views/result/index.html.haml
@@ -5,5 +5,5 @@
   .index-box__graph
     ここにグラフの表示
   .index-box__form-trans
-    %a.btn.btn-primary{href: "#", role: "button"} 
+    %a.btn.btn-primary{href: new_result_path, role: "button"} 
       今日の収支額を入力する
