--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,8 @@
       .collapse.navbar-collapse#navbarSupportedContent
       - if user_signed_in?
         %ul.navbar-nav.mr-auto
+          %li.navbar-nav.mr-auto
+          = link_to "初めての方はこちら", beginner_path, class: "nav-link"
           %li.nav-item.active
           = link_to "プロフィール変更", edit_user_registration_path, class: "nav-link"
           %li.nav-item.active
