--- a/app/views/result/show.html.haml
+++ b/app/views/result/show.html.haml
@@ -3,7 +3,12 @@
     %h2.title
       あなたの貯金額の推移です
   .index-box__graph
-    ここにグラフの表示
-  .index-box__form-trans
-    %a.btn.btn-primary{href: new_result_path, role: "button"} 
-      今日の収支額を入力する
+    = column_chart Saving.where(user_id: current_user).last(30).pluck(:updated_at, :total_savings)
+  - if @time != 0
+    .index-box__form-trans
+      %a.btn.btn-primary{href: new_result_path, role: "button"} 
+        今日の収支額を入力する
+  - else
+    .index-box__form-trans
+      %a.btn.btn-primary{href: edit_result_path(current_user.id), role: "button"} 
+        今日の収支額を更新する
