--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,12 @@
 @import "modules/app";
+@import "modules/new";
+@import "MODULES/edit";
+@import "modules/beginner";
+@import "modules/form-box";
+@import "modules/flash";
 @import "modules/top";
 @import "modules/user_registrions";
 @import "modules/edit_registraions";
 @import "modules/result";
 @import "modules/responsive";
-@import "bootstrap"; 
+@import "bootstrap";
