--- a/app/assets/stylesheets/modules/_result.scss
+++ b/app/assets/stylesheets/modules/_result.scss
@@ -1,3 +1,13 @@
+.show_bgi {
+  background-image: image-url(_23-2147893575);
+  background-color: rgba(0, 0, 0, 0.5);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+}
+
 .index-box {
   height: 600px;
   width: 100%;
@@ -6,16 +16,19 @@
     width: 500px;
     margin: auto;
     text-align: center;
-    padding: 20px 0;
+    padding: 20px 0 100px 0;
+    color: rgb(20, 173, 161);
   }
 
   &__graph {
     margin: auto;
-    height: 500px;
-    width: 1000px;
+    height: 50vh;
+    width: 70vw;
   }
 
   &__form-trans {
+    width: 300px;
+    margin: auto;
     padding: 20px 0;
     text-align: center;
   }
