--- a/app/views/result/new.html.haml
+++ b/app/views/result/new.html.haml
@@ -1,18 +1,24 @@
-.flash_alert
-  = flash[:alert]
-= form_for(@saving, url: result_index_path) do |f|
-  = f.label :今月の収入（０の場合は空白）
-  %br/
-  = f.number_field :month_income
-  %br/
-  = f.label :今日の収入（数字を入力してください）
-  %span.star ★
-  %br/
-  = f.number_field :daily_income
-  %br/
-  = f.label :今日の消費額（数字を入力してください）
-  %span.star ★
-  %br/
-  = f.number_field :daily_consumption
-  %br/
-  = f.submit "送信"
+.new_bgi
+  - if flash[:alert]
+    %p.alert_message.alert.alert-primary
+      = flash[:alert]
+  .form-box
+    = form_for(@saving, url: result_index_path) do |f|
+      = f.label :今月の収入（０の場合は空白）
+      %br/
+      .field
+        = f.number_field :month_income
+      %br/
+      = f.label :今日の収入（数字を入力してください）
+      %span.star ★
+      %br/
+      .field
+        = f.number_field :daily_income
+      %br/
+      = f.label :今日の消費額（数字を入力してください）
+      %span.star ★
+      %br/
+      .field
+        = f.number_field :daily_consumption
+      %br/
+      = f.submit "送信"
