--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "modules/app";
 @import "modules/new";
-@import "MODULES/edit";
+@import "modules/edit";
 @import "modules/beginner";
 @import "modules/form-box";
 @import "modules/flash";
