--- a/app/assets/stylesheets/modules/_edit_registraions.scss
+++ b/app/assets/stylesheets/modules/_edit_registraions.scss
@@ -1,5 +1,14 @@
-.edit-margin {
-  margin-left: 60px;
+.actions {
+  text-align: center;
+  margin-bottom: 20px;
+
+  .update {
+    margin-bottom: 20px;
+  }
+
+  .delete {
+    margin-bottom: 20px;
+  }
 }
 
 .edit-back-margin {
